# mirror-core

./: .gitignore  README.md  pyproject.toml  requirements.txt
skill/: mirror-core.skill
src/mirror_core/: __init__.py  body.py  cli.py  debate.py  distill.py  export.py  faculty.py  glassbox.py  llm.py  models.py  orchestrator.py  review.py  soul.py  timeline.py
templates/: faculty_template.md  questionnaire.json  soul_template.md
tests/: conftest.py  test_body.py  test_cli.py  test_debate.py  test_distill.py  test_export.py  test_faculty.py  test_glassbox.py  test_integration.py  test_llm.py  test_models.py  test_orchestrator.py  test_review.py  test_soul.py  test_timeline.py
